Recipe: Overflow bug fix and spacing tweaks for long titles

--- a/client/stylesheets/globals/layout.import.less
+++ b/client/stylesheets/globals/layout.import.less
@@ -55,6 +55,7 @@ body {
 
   > div.page {
     .position(absolute, 0, 0, 0, 0);
+    overflow-x: hidden;
   }
 }
 
